Add support for `--add-reads`,  `--default-module-for-created-files` and `--patch-module` in JavacOptions